--- a/(HTML+CSS+JS)_basic/03_JS.md
+++ b/(HTML+CSS+JS)_basic/03_JS.md
@@ -1,2 +1,127 @@
 # Javascript
 > Do it ! HTML+CSS+자바스크립트 웹 표준의 정석 - 고경희
+## 1. 자바스크립트 
+### 1-1. 자바스크립트 작성하기.
+* `<script>` 태그안에 작성.
+```html
+<body>
+  <h1 id="heading"> </h1>
+  <p> </p>
+  <script>
+    var heading = document.querySelector('#heading');
+    heading.onclick = function() {
+      heading.style.color = "red";
+    }
+  </script>
+</body>
+```
+* 외부 스크립트 파일로 연결하기.
+```html
+<body>
+  <h1 id="heading"> </h1>
+  <p> </p>
+  <script src= "js/change-clor.js"> </script>       // 외부 스크립트 파일 연결
+</body>
+```
+<hr>
+
+### 1-2. 기본 입출력 방법.
+* 간단한 입출력
+  * `alert(메시지)` : 알림 창 만들기.
+  * `confirm(메시지)` : 확인 창 만들기.
+  * `prompt(메시지, 지정할 기본값)` : 입력받기.
+    * ex) ` var name = prompt("이름을 입력하세요."); `
+  * `document.write(메시지 | 변수)` : 출력하기.
+  * `console.log(메시지 | 변수)` : 콘솔창에 출력하기.
+    * ex) ` console.log(name); `
+  * `parseInt(값)` : 입력받은 값을 정수로 변환 ( 실수,문자열이든 )
+   * ex) `var num = parseInt ( prompt ("입장객은 몇 명인가요?") );`
+<hr>
+
+## 2. 자바스크립트 기본 문법
+### 2-1. 변수 선언하기
+* `var 변수명;`
+* `var birthyear = 1994;`
+### 2-2. 자료형
+```html
+* 기본 유형
+  * 숫자형 : var birthYear = 2000; 
+  * 문자형 : var birthYear = "2000";       // " , ' 로 묶음.
+  * 논리형 : var isEmpty = true;           // true, false 2가지 값.
+* 복합 유형
+  * 배열 : var seasons = ['봄', '여름', '가을', '겨울'];       // 하나의 변수에 여러 개 값 저장.
+  * 객체 : var date = new Date();          // 함수와 속성을 함께 포함.    
+* 특수 유형
+  * undefined : 변수를 선언한 상태에서 값이 할당되지 않은 상태.
+  * null : 변수에 할당된 값이 유효하지 않다는 의미.    
+```
+### 2-3. 연산자
+* 비교 연산자
+  * == : 피연산자가 서로 같으면 true
+  * === : 피연산자도 같고 자료형도 같으면 true
+  * != : 피연산자가 서로 같지 않으면 true
+  * !== 피연산자가 서로 같지 않거나 자료형이 같지않으면 true
+* 문자열의 비교
+  * 맨 앞의 문자부터 하나씩 아스키 값을 비교해서 결정함.
+<hr>
+
+### 2-4. 조건문
+* if문, if~else문
+```html
+if(조건){
+  조건 결과 값이 true일 때 실행할 명령
+}
+```
+```html
+if(조건){
+  조건 결과 값이 ture일 때 실행할 명령
+}
+else{
+  조건 결과 값이 false일 때 실행할 명령
+}
+```
+* 조건 연산자
+  * `(조건) ? (true일 때) : (false일 때)`
+```html
+ex)
+(number % 3 === 0) ? alert("3의 배수") : alert("3의 배수가 아님.");
+```
+* switch문
+```html
+switch(조건)
+{
+  case 값1: 명령1
+    break;
+  case 값2: 명령2
+    break;
+  case 값3: 명령3
+    break;
+}
+```
+  * switch문의 조건은 case 문의 값과 일치해야 명령을 실행함.
+<hr>
+
+### 2-5. 반복문
+* for문
+```html
+for(초기값; 조건; 증가식){
+  
+}
+```
+* while문, do~while문
+  * while문은 조건이 true인 동안 명령을 반복
+  * do~while문은 일단 무조건 한번 명령을 실행한뒤 조건을 체크.
+```html
+while(조건){
+    
+}
+do{
+  
+}while(조건)
+```
+* break문, continue문
+  * break문을 실행할 경우 해당 반복문, 조건문을 빠져 나옴.
+  * continue문을 실행할 경우 해당 문을 한차례 건너뛰게 함.
+<hr>
+
+## 3.
