--- a/(HTML+CSS+JS)_basic/03_JS.md
+++ b/(HTML+CSS+JS)_basic/03_JS.md
@@ -124,4 +124,216 @@ do{
   * continue문을 실행할 경우 해당 문을 한차례 건너뛰게 함.
 <hr>
 
-## 3.
+## 3. 함수와 이벤트.
+### 3-1. 함수.
+* 함수 선언
+  * function 함수명() { ... }
+  * ex) ` function addNumber(){ var num1 = 1; } `
+* 함수 호출
+  * 함수명() 또는 함수명(변수)
+  * ex) ` addNumber(); `
+* 함수 선언과 실행 순서
+  * 자바스크립트 소스를 해석할 때 함수 선언을 가장 먼저 함. 
+  * 함수 호출을 먼저하고 뒤에 선언을 해도 문제가 없음.
+
+<hr>
+
+### 3-2. var과 호이스팅
+* var 변수의 특징
+  * 스코프: 변수를 선언하고 사용할 때 변수가 적용되는 범위
+  * 지역변수(로컬변수) : 함수 안에서만 사용할 수 있는 변수.
+    * 함수 안에서 var 예약어를 이용해 변수를 선언.
+  * 전역변수(글로벌변수) : 스크립트 소스 전체에서 사용할 수 있는 변수.
+    * 함수 밖에서 선언해야함.
+    * 함수 안에서는 var 예약어를 사용하지 않아야함.
+  * var 변수는 재선언과 재할당을 할 수 있음.
+* 호이스팅
+  * 상황에 따라 변수의 선언과 할당을 분리해서 선언 부분을 스코프의 가장 위쪽으로 끌어올리는 것.
+```html
+ex)
+<script>
+  var x = 10;
+
+  function displayNumber() {
+    console.log(" x = " + x);
+    console.log(" y = " + y);        // y가 아직 정의되지 않았는데 y를 사용.
+    var y = 20;
+  }
+  displayNumber();
+  x = 50;                // x 변수 재할당
+  var x = 100;           // x 변수 재선언
+</script>
+
+결과 값: x = 10
+         y = undefined
+   해석: 변수 호이스팅으로 스코프 최상단에서 var y; 라는 변수선언을 진행.
+         선언만하고 할당은 하지 않았으므로 undefined 라는 결과 값 출력.
+```
+<hr>
+
+### 3-3. let, const
+* var 예약어를 사용하면 재선언, 재할당등 실수가 많이 일어나 오류가 자주 발생함.
+* ES6 이후 부터는 let,const를 사용하는 것을 권장.
+* var, let, const
+  * 스코프의 범위 
+    * var : 함수 영역의 스코프.
+    * let, const : 블록( {}로 묶은부분 ) 영역의 스코프.
+  * 전역 변수를 선언하고 싶다면 let 예약어를 쓰지 않고 변수 이름과 값만 할당하면 됨.
+* let 
+  * 재할당은 가능하지만 재선언은 불가.
+  * 호이스팅이 없음.
+* const
+  * 재할당, 재선언 불가.
+* 자바스크립트 변수 가이드.
+  * 전역 변수는 최소한으로 사용. 오류 발생 확률이 높아짐.
+  * var 변수는 함수의 시작 부분에서 선언. 호이스팅 때문에 오류 발생 확률 높아짐.
+  * for문에서 카운터 변수로 var 예약어를 사용하지 않음.
+  * ES6를 사용한다면 var보다 let을 사용.
+<hr>
+
+### 3-4. 재사용 가능한 함수 만들기.
+* 매개변수, 인수, return
+  * 매개변수: 함수를 선언할 때 외부에서 값을 받아 줄 변수.
+  * 인수: 함수를 호출할 때 값 부분.
+  * return: 함수의 반환 값.
+* 매개변수 기본값 지정하기.
+```html
+ex)
+function multiple(a, b = 5){            // 매개변수 b의 변수값을 넘겨받지 못했을때 기본값을 지정.
+  return a*b;
+}
+```
+<hr>
+
+### 3-5. 함수 표현식.
+* 익명함수 : 함수 이름을 지정하지 않고 사용.
+  * ` function(a,b) { ... } `     
+  * 익명함수는 함수 자체가 식이므로 변수에 할당해서 사용.
+  * 다른 함수의 매개변수로 사용할 수도 있음.
+```html
+ex)
+var sum = function(a,b){               // 익명함수를 선언하고 sum에 할당.
+  return a+b;
+}
+documnet.write( sum(10,20) );          // 익명함수 실행.
+```
+* 즉시 실행 함수 : 함수를 호출하지 않고 바로 실행.
+  * ` ( function() { ... }() ); `
+  * ` ( function(매개변수) { ... }(인수) ); `
+```html
+ex)
+( function(a,b){
+    sum = a + b;
+}(10, 20) );
+document.write(sum);
+```
+* 화살표 함수 
+  * 익명 함수에서만 사용할 수 있음.
+  * 변수에 할당해서 사용.
+  * (매개변수) => { 함수 내용}
+```html
+ex)
+const hi = () => { return "hello" };                // 매개변수가 없음.  
+let num = user => { documnet.write(user); }         // 매개변수가 1개일 때.
+let sum = (a,b) => a+b;                             // 매개변수가 2개 이상일 때.
+```
+<hr>
+
+### 3-6. 이벤트, 이벤트처리기
+> 이벤트: 사용자가 행하는 어떤 동작. 클릭이나 선택 등등.
+> 이벤트처리기: 이벤트가 발생했을 때 실행하는 함수.
+* 마우스 이벤트
+
+| 종류 | 설명 | 
+|---|:---:|
+| click | 사용자가 HTML 요소를 클릭할 때 이벤트 발생. |
+| dbclick | 사용자가 HTML 요소를 더블클릭할 때 이벤트 발생. |
+| mousedown | 사용자가 요소 위에서 마우스 버튼을 눌렀을 때 이벤트 발생. |
+| mousemove | 사용자가 요소 위에서 마우스 포인터를 움직일 때 이벤트 발생. |
+| mouseover | 마우스 포인터가 요소위로 옮겨질 때 이벤트 발생. |
+| mouseout | 마우스 포인터가 요소를 벗어날 때 이벤트 발생. |
+| mouseup | 사용자가 요소 위에 놓인 마우스 버튼에서 손을 뗄 때 이벤트 발생. |
+
+* 키보드 이벤트
+
+| 종류 | 설명 | 
+|---|:---:|
+| keydown | 사용자가 키를 누르는 동안 이벤트 발생 |
+| keypress | 사용자가 키를 눌렀을 때 이벤트 발생 |
+| keyup | 사용자가 키에서 손을 뗄 때 이벤트 발생 |
+
+* 폼 이벤트
+
+| 종류 | 설명 | 
+|---|:---:|
+| blur | 폼 요소에 포커스를 잃었을 때 이벤트 발생. |
+| change | 목록이나 체크 상태 등이 변경되면 이벤트 발생. `<input>, <select>, <textarea>`태그에서 사용. |
+| focus | 폼 요소에 포커스가 놓였을 때 이벤트 발생. ` <lable>, <select>, <textarea>, <button>` 태그에서 사용. |
+| reset | 폼이 리셋되었을 때 이벤트 발생. |
+| submit | submit 버튼을 클릭했을 때 이벤트 발생. |
+
+* 문서로딩 이벤트
+
+| 종류 | 설명 | 
+|---|:---:|
+| abort | 문서가 완전히 로딩되기 전에 불러오기를 멈췄을 때 이벤트 발생. |
+| error | 문서가 정확히 로딩되지 않았을 때 이벤트 발생. |
+| load | 문서 로딩이 끝나면 이벤트 발생. |
+| resize | 문서 화면 크기가 바뀌었을 때 이벤트 발생. |
+| scroll | 문서 화면이 스크롤되었을 때 이벤트 발생. |
+| unload | 문서에서 벗어날 때 이벤트 발생. |
+<hr>
+
+* 이벤트 처리기(이벤트 핸들러)
+  * `<태그 on이벤트명 = "함수명"> `
+  * `<a onclick = "alert('클릭')"> `
+```html
+ex)
+<body>
+  <ul>
+    <li><a href = "#" onclick = "changeColor('green')"> green </a></li>
+    <li><a href = "#" onclick = "changeColor('red')"> red </a></li>
+  </ul>
+  <div id="result"> </div>
+
+  <script>
+    function changeColor(color){
+      var result = document.querySelector('#result');
+      result.style.backgroundColor = color;             
+    }
+  </script>
+</body>
+```
+<hr>
+
+### 3-7. DOM을 이용한 이벤트 처리기.
+* HTML 태그에서 onclick 같은 이벤트를 넣지않고 자바스크립트에서 이벤트를 넣음.
+* DOM을 사용하면 자바스크립트가 HTML의 요소를 가져와서 이벤트 처리기를 연결.
+* 태그와 자바스크립트 소스를 분리해서 보기 좋게 사용할 수 있음.
+* ` 웹요소.onclick = 함수; `
+* `querySelecot()` : 웹 요소를 가져옴. 괄호안에는 클래스, id, 선택자를 넣을 수 있음. 
+```html
+ex)
+<div id = "item">
+  <button id = "open"> 상세 설명 보기 </button>
+  <div id = "desc">
+    <h1> 내용 </h1>
+    <p> 내용 </p>
+    <button id = "close"> 살세 설명 닫기 </button>
+  </div>
+</div>
+
+<script>
+  document.querySelector('#open').onclick = function ()            //querySelecot를 통해 id=open을 찾고, onclick시 즉시 실행 함수
+  {
+    document.querySelector('#desc').style.display = "block";       // id=desc의 display를 블록레벨로 만듬.
+    document.querySelector('#open').style.display = "none";        // id=open의 display를 none으로 만듬. 
+  }
+  document.querySelector('#close').onclick = function ()
+  {
+    document.querySelector('#desc').style.display = "none";
+    document.querySelector('#open').style.display = "block";
+  }
+</script>
+```
+
