--- a/(HTML+CSS+JS)_basic/03_JS.md
+++ b/(HTML+CSS+JS)_basic/03_JS.md
@@ -340,4 +340,106 @@ ex)
   }
 </script>
 ```
+<hr>
+
+## 4. 객체 (Object)
+### 4-1. 객체 알아보기
+* 자바스크립트에서 객체란?
+  * 프로그램에서 인식할 수 있는 모든 대상을 가리킴.
+  * 데이터를 저장하고 처리하는 기본 단위.
+* 자바스크립트에서 사용하는 객체
+  * 문서 객체 모델(DOM)
+  * 브라우저 관련 객체
+  * 내장 객체
+* 객체 - 인스턴스 만들기
+  * 객체를 사용하려면 참조 형태로 사용 해야함.
+  * 즉, 객체 자체가 아니라 인스턴스 형태로 만들어서 사용.
+  * 객체가 틀이라면 그 틀을 기반으로 만들어 낸 것이 인스턴스.
+  * 방법: ` new 객체명 `
+  * 예시: ` let now = new Date()           // Date객체의 인스턴스를 만들고 변수에 저장 `
+* 객체 - 프로퍼티, 메서드
+  * 객체에는 프로퍼티와 메서드가 있다.
+  * 프로퍼티 : 객체의 특징, 속성을 가르킴
+  * 메서드 : 객체의 동작을 표현함.
+  * 프로퍼티와 메서드 표시: 인스턴스 명 뒤에 마침표(.) 를 붙이고 프로퍼티나 메서드 이름을 작성.
+<hr>
+
+### 4-2. 내장 객체
+* Array 객체 (배열)
+  * Array 객체로 배열 만드는 방법.
+```html
+ex)
+let numbers = new Array();                             // 초기값이 없고 배열의 크기를 지정하지 않음.
+let numbers = new Array(4);                            // 초기값이 없고 배열의 크기를 지정함.
+let numbers = ["one", "two", "three", "four"];         // 초기값이 있고 배열 선언.
+let numbers = Array("one", "two", "three", "four");    // 초기값이 있고 배열 선언.
+```
+  * Array 객체의 length 프로퍼티.
+    * 배열의 크기가 저장되어 있음.
+  * Array 객체의 메서드
+
+| 종류 | 설명 | 
+|---|:---:|
+| concat() | 서로 다른 배열 2개를 합쳐 새로운 배열을 만듬. |
+| join() | 배열 요소를 하나의 문자열로 만듬.  |
+| push() | 배열의 맨 끝에 새로운 요소를 추가. |
+| unshift() | 배열의 시작 부분에 새로운 요소를 추가. |
+| pop() | 배열의 마지막 요소를 꺼내 그 값을 결과로 반환. |
+| shift() | 배열의 첫번째 요소를 꺼내 그 값을 결과로 반환. |
+| splice() | 배열의 요소를 추가하거나 삭제함. |
+| slice() | 배열에서 특정한 부분만 잘라냄. |
+<hr>
+
+* Math 객체 (수학)
+  * Math 객체는 new로 인스턴스를 만들지 않고 바로 사용함.
+  * ` Math.프로퍼티명, Math.메서드명 `
+  * Math 객체의 메서드
+
+| 종류 | 설명 | 
+|---|:---:|
+| abs() | 절대값을 반환. |
+| floor() | 매개변수의 소수점 이하 부분을 버림. |
+| max() | 매개변수의 최댓값을 반환. |
+| min() | 매개변수의 최솟값을 반환. |
+| random() | 0과 1사이의 무작위 수를 반환. |
+| round() | 매개변수의 소수점 이하 부분을 반올림. |
+| sqrt() | 매개변수에 대한 제곱근을 반환. |
+ <hr>
+
+ ### 4-3 브라우저 관련 객체
+ * window 객체
+  * window 객체의 프로퍼티
+
+| 종류 | 설명 | 
+|---|:---:|
+| document | 브라우저 창에 표시된 웹 문서에 접근 할 수 있음. |
+| innerHeight | 내용 영역의 높이를 나타냄. |
+| innerWidth | 내용 영역의 너비를 나타냄. |
+| location | window 객체의 위치 또는 현재 URL을 나타냄. |
+| name | 브라우저 창의 이름을 가져오거나 수정. |
+
+  * window 객체의 메서드
+
+| 종류 | 설명 | 
+|---|:---:|
+| alert() | 알림 창을 표시. |
+| close() | 현재 창을 닫음. |
+| open() | 새 창을 열음. |
+| confirm() | 확인,취소 버튼이 있는 확인 창을 띄움. |
+| moveBy() | 현재 창을 지정한 크기만큼 이동. |
+| moveTo() | 현재 창을 지정한 좌표로 이동. |
+| prompt() | 프롬프트 창에 입력한 텍스트를 반환. |
+| scroll() | 지정한 위치까지 스크롤. |
+| stop() | 로딩을 중지. |
+
+
+
+
+
+
+
+
+
+
+
 
